[package]
name = "kana_power"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_UI_TextServices",
] }
once_cell = "1.18"
tray-icon = "0.11"
image = "0.23"
log = "0.4"
simple-logging = "2.0"

# Windows向けサブシステム設定
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
